added new system data and optimised old